# chess-cpp

./: .gitignore  CMakeLists.txt  README.md
include/core/: abstract_chess_piece.hpp  bishop.hpp  grid.hpp  king.hpp  knight.hpp  pawn.hpp  queen.hpp  rook.hpp
include/ui/: grid_renderer.hpp
src/core/: abstract_chess_piece.cpp  abstract_chess_piece.hpp  bishop.cpp  grid.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
src/ui/: grid_renderer.cpp  main_window.cpp
tests/: macros.hpp  test_bishop.cpp  test_common.hpp  test_grid.cpp  test_king.cpp  test_knight.cpp  test_main.cpp  test_pawn.cpp  test_queen.cpp  test_rook.cpp
